Added trusts model to gpg

--- a/tasks/backup.yml
+++ b/tasks/backup.yml
@@ -15,6 +15,7 @@
     gpg
     --batch
     --output "{{ target }}"
+    --trust-model always
     --encrypt
     --recipient {{ gpg_email }}
     "{{ source }}"
