--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,7 @@
 - name: "Backup | Installing system dependencies"
   apt:
     pkg:
-      - python-pip
+      - python3-pip
       - gpg
 
 - name: "Backup | Installing python dependencies"
